--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ APP_URL=http://localhost
 APP_LOCALE=zh_TW
 APP_TIMEZONE=Asia/Taipei
 ADMIN_KEY=
+LAST_MISSION_UID=
+LAST_TASK_ID=
 
 LOG_CHANNEL=daily
 ROLLBAR_ACCESS_TOKEN=
