add: mission flow

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ LAST_MISSION_UID=
 LAST_TASK_ID=
 REGISTER_MODE=
 ANSWER_INPUT_TYPE=
+ENABLE_FLOW_CTRL=
 
 LOG_CHANNEL=daily
 ROLLBAR_ACCESS_TOKEN=
