--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_TIMEZONE=Asia/Taipei
 ADMIN_KEY=
 LAST_MISSION_UID=
 LAST_TASK_ID=
+GIFT_MISSION_UID=
 REGISTER_MODE=
 ANSWER_INPUT_TYPE=
 ENABLE_FLOW_CTRL=
