--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-gd": "*",
         "endroid/qr-code": "^3.5",
         "flipbox/lumen-generator": "^5.6",
+        "guzzlehttp/guzzle": "^7.3",
         "laravel/lumen-framework": "5.8.*",
         "ramsey/uuid": "^3.8",
         "rollbar/rollbar": "^1.8",
